--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Reddit Feed</string>
+    <string name="post_url">Reddit Feed</string>
+    <string name="post_thumbnail">Reddit Feed</string>
+    <string name="post_title">Reddit Feed</string>
+    <string name="post_author">Reddit Feed</string>
+    <string name="post_updated">Reddit Feed</string>
 </resources>
